[gd_scene load_steps=11 format=3 uid="uid://ba6vm6k7nb3mg"]

[ext_resource type="Script" path="res://game.gd" id="1_hve3p"]
[ext_resource type="PackedScene" uid="uid://hr1l3ilyeks8" path="res://pipes.tscn" id="2_mfdv2"]
[ext_resource type="PackedScene" uid="uid://dy8yijg3mnchy" path="res://bg.tscn" id="3_iotsf"]
[ext_resource type="PackedScene" uid="uid://cl5n4l3oqo1ca" path="res://player.tscn" id="4_lc2xo"]
[ext_resource type="PackedScene" uid="uid://d13i7c3emkq5h" path="res://floor.tscn" id="5_215e1"]
[ext_resource type="PackedScene" uid="uid://cc31d0ib0wkfb" path="res://hud.tscn" id="6_7sc4i"]
[ext_resource type="AudioStream" uid="uid://cr6n284as2axe" path="res://assets/SFX/hit.ogg" id="7_80cx4"]
[ext_resource type="AudioStream" uid="uid://cto0cqvboyqer" path="res://assets/SFX/die.ogg" id="8_e8heu"]
[ext_resource type="AudioStream" uid="uid://bfxr5aoqr333y" path="res://assets/SFX/point.ogg" id="9_rvswv"]
[ext_resource type="PackedScene" uid="uid://bkf5prik7ey4q" path="res://game_over.tscn" id="10_hve3p"]

[node name="Game" type="Node"]
script = ExtResource("1_hve3p")
pipe_scene = ExtResource("2_mfdv2")

[node name="BG" parent="." instance=ExtResource("3_iotsf")]

[node name="Player" parent="." instance=ExtResource("4_lc2xo")]
visible = false
position = Vector2(104, 137)

[node name="Floor" parent="." instance=ExtResource("5_215e1")]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="HUD" parent="." instance=ExtResource("6_7sc4i")]

[node name="AudioHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_80cx4")
mix_target = 1

[node name="AudioDie" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_e8heu")
mix_target = 1

[node name="AudioScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_rvswv")

[node name="GameOver" parent="." instance=ExtResource("10_hve3p")]

[connection signal="hit" from="Player" to="." method="_on_hit"]
